tests/ui/target-feature/tied-features-no-implication.pacg.stderr
error: the target features paca, pacg must all be either enabled or disabled together

error[E0428]: the name `foo` is defined multiple times
  --> $DIR/tied-features-no-implication.rs:31:1
   |
LL | fn foo() {}
   | -------- previous definition of the value `foo` here
...
LL | pub unsafe fn foo() {}
   | ^^^^^^^^^^^^^^^^^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the value namespace of this module

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0428`.
